Correção nome das tags

--- a/index.html
+++ b/index.html
@@ -35,44 +35,44 @@
       <div class="Principal">
         <a href="pagina2.html"><img class="img1" src="imagens/resumo-da-cartografia.jpg" alt=""></a>
         <a href="pagina2.html">
-          <p class="p1">Cartografia</p>
+          <p class="tituloLink">Cartografia</p>
         </a>
       </div>
       <div class="Principal">
         <a href="pagina3,1.html"><img class="img1" src="imagens/images (8).jpeg"></a>
         <a href=" pagina3,1.html">
-          <p class="p1">Geopolitica</p>
+          <p class="tituloLink">Geopolitica</p>
         </a>
       </div>
       <div class="Principal">
         <a href="pagina3,2.html"><img class="img1" src="imagens/images (11).jpeg"></a>
         <a href=" pagina3,2.html">
-          <p class="p1">Climas</p>
+          <p class="tituloLink">Climas</p>
         </a>
       </div>
       <div class="Principal">
         <a href="pagina3,3.html"><img class="img1" src="imagens/relevo-1.jpg"></a>
         <a href=" pagina3,3.html">
-          <p class="p1">Relevo</p>
+          <p class="tituloLink">Relevo</p>
         </a>
       </div>
       <div class="Principal">
         <a href="pagina3,4.html"><img class="img1" src="imagens/images (9).jpeg"></a>
         <a href=" pagina3,4.html">
-          <p class="p1">Problemas Ambientais</p>
+          <p class="tituloLink">Problemas Ambientais</p>
         </a>
       </div>
       <div class="Principal">
         <a href="pagina3,5.html"><img class="img1" src="imagens/images (10).jpeg"></a>
         <a href=" pagina3,5.html">
-          <p class="p1">Geografia Econômica</p>
+          <p class="tituloLink">Geografia Econômica</p>
         </a>
       </div>
     </div>
     <div class="Principal">
       <a href="pagina3,6.html"><img class="img1" src="imagens/images (13).jpeg"></a>
       <a href=" pagina3,6.html">
-        <p class="p1">Sambaqui</p>
+        <p class="tituloLink">Sambaqui</p>
       </a>
     </div>
     </div>
