--- a/pagina2.html
+++ b/pagina2.html
@@ -33,29 +33,29 @@
   </nav>
   <main class="conteiner">
     <div class="Principal1">
-      <p class="p2">
+      <p class="tituloParagrafo">
         Cartográfia
       </p>
     </div>
     <div class="Principal2">
-      <p class="p3">
+      <p class="conteudo">
         A cartografia é a analisar e produção de mapas, cartogramas, plantas e demais tipos de representações gráficas
         do espaço.O primeiro mapa feito pela humanidade possui milhares de anos, sendo aperfeiçoado com o tempo suas
         técnicas de produção de mapas. Atualmente são usadas imagens de satélites e instrumentos como o GPS que são
         importantes aliados da cartografia (MUNDO EDUCAÇÃO, 2023).
       </p>
-      <p class="p3">
+      <p class="conteudo">
         O que é cartografia?
       </p>
-      <p class="p3">
+      <p class="conteudo">
         A cartografia é a ciência que se dedica à representação do espaço geográfico por meio do estudo, análise e
         confecção de cartas ou mapas. Os seus produtos, entretanto, não se limitam aos mapas: plantas, croquis e o globo
         terrestre são outros resultados diretos da aplicação dos conhecimentos cartográficos (MUNDO EDUCAÇÃO, 2023).
       </p>
-      <p class="p3">O significado da cartografia que temos hoje em dia foi estabelecido pela Associação Cartográfica
+      <p class="conteudo">O significado da cartografia que temos hoje em dia foi estabelecido pela Associação Cartográfica
         Internacional (ACI), no ano 1996, que cada vez é mais aceita (MUNDO EDUCAÇÃO, 2023).
       </p>
-      <p class="p3">A cartografia se utiliza de variedade de téCartocnicas para que seja possível a representação do
+      <p class="conteudo">A cartografia se utiliza de variedade de téCartocnicas para que seja possível a representação do
         espaço,
         uma delas é a Escala Cartográfica (MUNDO EDUCAÇÃO, 2023).
       </p>
@@ -65,8 +65,8 @@
         <p class="referenciaimg" id="refImage">Fonte: resumo escolar, 2023</p>
       </div>
 
-      <p class="p3">Para que serve a cartografia ? </p>
-      <p class="p3">Por meio das técnicas cartográficas, cria-se uma série de produtos que nos auxiliam no estudo e
+      <p class="conteudo">Para que serve a cartografia ? </p>
+      <p class="conteudo">Por meio das técnicas cartográficas, cria-se uma série de produtos que nos auxiliam no estudo e
         compreensão de várias características do espaço físico, como (MUNDO EDUCAÇÃO, 2023):
       </p>
       <ul class="list">
@@ -76,7 +76,7 @@
         <li>distribuição dos tipos de solo</li>
         <li>localização e limites dos biomas etc.</li>
       </ul>
-      <p class="p3">
+      <p class="conteudo">
         A cartografia permite também a espacialização de informações geográficas úteis para tomadas de decisões na
         esfera política, gestão e planejamento e para o desenvolvimento de estratégias de caráter político, social ou
         econômico. Para tal, são utilizados os mapas (MUNDO EDUCAÇÃO, 2023):
@@ -88,12 +88,12 @@
         <li>econômicos</li>
         <li>de uso da terra, e de uma variedade de outros temas </li>
       </ul>
-      <p class="p3">
+      <p class="conteudo">
         Tipos de cartografia
-      <p class="p3">
+      <p class="conteudo">
         A cartografia pode ser dividida em duas grandes áreas:
       </p>
-      <p class="p3">Cartografia sistemática: ramo da cartografia dedicado à representação das características físicas da
+      <p class="conteudo">Cartografia sistemática: ramo da cartografia dedicado à representação das características físicas da
         superfície terrestre, e por essa razão é também chamada de cartografia topográfica. As informações representadas
         são de caráter genérico e, por isso, duradouras no tempo, sendo coletadas e replicadas por meio de técnicas
         específicas.
@@ -104,7 +104,7 @@
         <img class="imghis" src="imagens/Carta-topografica-IBGE.webp" alt="">
         <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2022</p>
       </div>
-      <p class="p3">Cartografia temática: ramo da cartografia dedicado à produção de mapas com base em informações
+      <p class="conteudo">Cartografia temática: ramo da cartografia dedicado à produção de mapas com base em informações
         geográficas diversas, não se restringindo às dimensões físicas de uma área. Seus produtos indicam a ocorrência
         espacial de fenômenos específicos, como econômicos, sociais, demográficos e mesmo naturais. Por essa razão,
         recebe o nome também de cartografia geográfica.
@@ -115,9 +115,9 @@
         <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2023
         </p>
       </div>
-      <p class="p2">Conceitos de cartografia
+      <p class="tituloParagrafo">Conceitos de cartografia
       </p>
-      <p class="p3">Coordenadas geográficas: são valores numéricos que indicam a localização de um objeto ou ponto
+      <p class="conteudo">Coordenadas geográficas: são valores numéricos que indicam a localização de um objeto ou ponto
         qualquer na superfície terrestre. São definidas com base nos valores de latitude e longitude, indicadas,
         respectivamente, pelos paralelos e meridianos (OLIVEIRA, 2019).
       </p>
@@ -126,7 +126,7 @@
         <img class="imghis" src="imagens/sistema-de-projecao-cartografica-780x424.webp" alt="">
         <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2021 </p>
       </div>
-      <p class="p3">CProjeção cartográfica: são representações da Terra em uma superfície plana. Para isso, baseiam-se
+      <p class="conteudo">CProjeção cartográfica: são representações da Terra em uma superfície plana. Para isso, baseiam-se
         em uma rede composta por linhas imaginárias horizontais e verticais (paralelos e meridianos) perpendiculares
         entre si. São classificadas quanto à superfície de projeção (cônica, cilíndrica, plana) e quanto às suas
         propriedades (conforme, equidistante, equivalente) (OLIVEIRA, 2019).
@@ -136,12 +136,12 @@
         <img class="imghis" src="imagens/coordenadas-geograficas-1024x490.webp" alt="">
         <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2021 </p>
       </div>
-      <p class="p3">Escala cartográfica: é uma relação numérica (proporção) entre as dimensões de uma superfície,
+      <p class="conteudo">Escala cartográfica: é uma relação numérica (proporção) entre as dimensões de uma superfície,
         conforme são representadas no mapa, e suas dimensões reais, medidas de forma linear. Uma escala de 1:250.000
         expressa em centímetros, por exemplo, indica que cada centímetro do mapa corresponde a 250.000 cm ou 2,5 km na
         superfície do terreno (OLIVEIRA, 2019).
       </p>
-      <p class="p3">Mapas: são representações gráficas, em escala reduzida, da superfície terrestre ou de parte dela
+      <p class="conteudo">Mapas: são representações gráficas, em escala reduzida, da superfície terrestre ou de parte dela
         sobre um plano. Podem ainda representar Projeção Cilíndrica (OLIVEIRA, 2019).
       </p>
       <div class="hisimg">
@@ -149,14 +149,14 @@
         <img class="imghis" src="imagens/mapa-mundi-político.png.webp" alt="">
         <p class="referenciaimg" id="refImage">Fonte: GIOVANINI, 2020</p>
       </div>
-      <p class="p3">Essa projeção é a consequência da projeção dos paralelos e meridianos sobre um cilindro. Esse tipo
+      <p class="conteudo">Essa projeção é a consequência da projeção dos paralelos e meridianos sobre um cilindro. Esse tipo
         de projeção tem os paralelos retos e horizontais; e os meridianos retos e verticais, as regiões de latitudes
         elevadas sofrem com deformações. É a projeção mais usada para representação total da Terra (OLIVEIRA, 2019).
       </p>
-      <p class="p2">Projeções</p>
-      <p class="p3">Projeção Cônica
+      <p class="tituloParagrafo">Projeções</p>
+      <p class="conteudo">Projeção Cônica
       </p>
-      <p class="p3">Essa projeção é a consequência da projeção do globo terrestre sobre um cone. Esse tipo de projeção
+      <p class="conteudo">Essa projeção é a consequência da projeção do globo terrestre sobre um cone. Esse tipo de projeção
         possui paralelos circulares e meridianos radiais, ou seja, retas originadas de um único ponto; normalmente a
         projeção cônica é usada para a representação de países ou regiões de latitudes intermediárias. (OLIVEIRA,2019)
       </p>
@@ -165,8 +165,8 @@
         <img class="imghis" src="imagens/3-19.gif" alt="">
         <p class="referenciaimg" id="refImage">Fonte: RAMOS, 2018</p>
       </div>
-      <p class="p3">Projeção Azimutal</p>
-      <p class="p3">A Projeção Azimutal tem como ponto de referência o Polo Sul ou Norte, normalmente o Norte.
+      <p class="conteudo">Projeção Azimutal</p>
+      <p class="conteudo">A Projeção Azimutal tem como ponto de referência o Polo Sul ou Norte, normalmente o Norte.
         (OLIVEIRA,2019)
       </p>
       <div class="hisimg">
@@ -174,8 +174,8 @@
         <img class="imghis" src="imagens/proclau6.jpg" alt="">
         <p class="referenciaimg" id="refImage">Fonte: MENDONÇA, 2013</p>
       </div>
-      <p class="p3">Projeção Robinson</p>
-      <p class="p3">Essa é a projeção mais usada na atualidade, ela não causa deformações nas formas, porém não preserva
+      <p class="conteudo">Projeção Robinson</p>
+      <p class="conteudo">Essa é a projeção mais usada na atualidade, ela não causa deformações nas formas, porém não preserva
         nenhuma propriedade de conformidade. Essa projeção é comum no atlas e mapas escolares espacialmente determinadas
         informações geográficas, compondo, assim, os mapas temáticos (OLIVEIRA, 2019).</p>
 
