--- a/pagina3,1.html
+++ b/pagina3,1.html
@@ -33,26 +33,26 @@
   </nav>
   <main class="conteiner">
     <div class="Principal1">
-      <p class="p2">
+      <p class="tituloParagrafo">
         Geopolítica
       </p>
     </div>
     <div class="Principal2">
-      <p class="p3">
+      <p class="conteudo">
         A geopolítica pode ser considerada como um subproduto da geografia política,sendo como uma visão reducionista da
         geografia política. O primeiro autor a usar este termo foi um sueco chamado Rudolf Kjellén,no começo do século
         20 (ILUSTRADA,2020).
       </p>
-      <p class="p2">
+      <p class="tituloParagrafo">
         Diferenças de geopolítica e geografia política
       </p>
-      <p class="p3">
+      <p class="conteudo">
         Geopolítica e Geografia Política estão intimamente relacionadas, mas apresentam abordagens distintas
         (GUITARRARA, 2023):
 
 
       </p>
-      <p class="p3">Geografia Política: inserida no escopo da Geografia Humana, corresponde a uma área do conhecimento
+      <p class="conteudo">Geografia Política: inserida no escopo da Geografia Humana, corresponde a uma área do conhecimento
         que se ocupa do estudo dos Estados e de sua dimensão espacial, isto é, dos territórios.
 
       </p>
@@ -65,7 +65,7 @@
         <p class="referenciaimg" id="refImage">Fonte: CONCEITOS, 2023</p>
       </div>
 
-      <p class="p3">Geopolítica: coloca o Estado no centro da ação e se volta à compreensão das relações de poder entre
+      <p class="conteudo">Geopolítica: coloca o Estado no centro da ação e se volta à compreensão das relações de poder entre
         os diferentes Estados, às estratégias e articulações que permeiam essa dinâmica e aos seus desdobramentos em
         diferentes períodos e conjunturas.
       </p>
@@ -75,23 +75,23 @@
         <img class="imghis" src="geopoliticaimg/o-que-e-geopolitica.webp" alt="">
         <p class="referenciaimg" id="refImage">Fonte: CONCEITOS, 2023</p>
       </div>
-      <p class="p2">Ideias</p>
-      <p class="p3">
+      <p class="tituloParagrafo">Ideias</p>
+      <p class="conteudo">
         A geopolítica tem o objetivo de interpretar a realidade global e envolve o estudo de guerras, conflitos,
         disputas ideológicas e territoriais, questões políticas, acordos internacionais, etc (TODA MATÉRIA, 2023).</p>
-      <p class="p3">
+      <p class="conteudo">
         Sendo assim, a geopolítica tem como foco de estudo as perspectivas geográficas e históricas, para assim,
         oferecer explicações e reflexões sobre os temas abordados (TODA MATÉRIA, 2023).
 
-      <p class="p3">
+      <p class="conteudo">
         O campo de estudo geopolítico busca interpretar as relações de poder, seja de um país com o seu território ou
         entre diferentes Estados, observando assim os acontecimentos globais (TODA MATÉRIA, 2023).
 
       </p>
-      <p class="p3">Essa pesquisa envolve diferentes fatores, como as associações diplomáticas, os interesses de cada
+      <p class="conteudo">Essa pesquisa envolve diferentes fatores, como as associações diplomáticas, os interesses de cada
         país e as estratégias adotadas por eles diante de diferentes situações (TODA MATÉRIA, 2023).
       </p>
-      <p class="p3">Para isso, a área avalia temas como (CNN, 2023):
+      <p class="conteudo">Para isso, a área avalia temas como (CNN, 2023):
       </p>
       <ul class="list">
         <li>conflitos mundiais;
@@ -106,34 +106,34 @@
         <li>A partir disso, os estudos buscam compreender as motivações, os comportamentos e os impactos das relações de
           poder no cenário territorial e também mundial</li>
       </ul>
-      <p class="p3"> O termo Geopolítica foi criado no início do século XX pelo cientista político Rudolf Kjellén, que
+      <p class="conteudo"> O termo Geopolítica foi criado no início do século XX pelo cientista político Rudolf Kjellén, que
         se baseou na obra "Politische Geographie" (Geografia Política) de Friedrich Ratzel, escrito em 1897. Esse
         conceito tem início em seu desenvolvimento por volta da segunda metade do século XIX, por conta das redefinições
         de fronteiras que estavam ocorrendo pelo território europeu. O imperialismo também foi importante para
         compreender a geopolítica, sendo um sistema de expansionismo europeu a partir de uma dominação territorial nos
         continentes africano e asiático chamado de neocolonialismo (SILVA, 2014).
       </p>
-      <p class="p3">De modo geral, Kjellén cria o termo geopolítica buscando construir relações entre os acontecimentos
+      <p class="conteudo">De modo geral, Kjellén cria o termo geopolítica buscando construir relações entre os acontecimentos
         políticos e os aspectos geográficos, tentando compreender como as estratégias escolhidas pelos governos
         influenciavam nos seus territórios e, por consequência, no cenário global (SILVA, 2014).
       </p>
-      <p class="p2">Resumindo:</p>
-      <p class="p3">A geopolítica é a ciência que estuda relação entre estado, governo Conexão do estado com seu
+      <p class="tituloParagrafo">Resumindo:</p>
+      <p class="conteudo">A geopolítica é a ciência que estuda relação entre estado, governo Conexão do estado com seu
         território, recursos, necessidades e relação que ele pode estabelecer entre outros estados
       </p>
-      <p class="p3">Governo: administra estado
+      <p class="conteudo">Governo: administra estado
       </p>
-      <p class="p3">Estado: exercer relação de poder sobre seu território
+      <p class="conteudo">Estado: exercer relação de poder sobre seu território
       </p>
-      <p class="p3">Força armadas é o principal meio que estado possui para garantir sua soberania
+      <p class="conteudo">Força armadas é o principal meio que estado possui para garantir sua soberania
       </p>
-      <p class="p3">Questão economia
+      <p class="conteudo">Questão economia
       </p>
-      <p class="p3">Acordos comerciais e recursos naturais passaram a ser mais importante
+      <p class="conteudo">Acordos comerciais e recursos naturais passaram a ser mais importante
       </p>
-      <p class="p2">Ordem mundial
+      <p class="tituloParagrafo">Ordem mundial
       </p>
-      <p class="p3">Relação de força e poder entre estado nível global, nem todos os estados são iguais, hierarquia
+      <p class="conteudo">Relação de força e poder entre estado nível global, nem todos os estados são iguais, hierarquia
         entre estado os mais poderosos são chamados de grande Potência mundial. As ordens mundial podem durar décadas
         vão sofrer alteração ao longo do tempo Ex: século 20 até segunda guerra mundial, ordem multipolar múltiplas
         Potências na sua liderança porém existia equilíbrio e nenhum era forte o bastante para subjugar as
@@ -149,7 +149,7 @@
         <li>Superpotência nucleares</li>
         <li>Estados Unidos X União Soviética</li>
       </ul>
-      <p class="p3">A Invenção da boba atômica levou os Estados Unidos ao patamar de superpotência que logo foi alcançado pela União Soviética (DESCOMPLICA, 2022).</p>
+      <p class="conteudo">A Invenção da boba atômica levou os Estados Unidos ao patamar de superpotência que logo foi alcançado pela União Soviética (DESCOMPLICA, 2022).</p>
 
       <p class="bibliografia1">REFERÊNCIA BIBLIOGRÁFICA:</p>
 
