--- a/pagina3,3.html
+++ b/pagina3,3.html
@@ -33,15 +33,15 @@
   </nav>
   <main class="conteiner">
     <div class="Principal1">
-      <p class="p2">Relevo</p>
+      <p class="tituloParagrafo">Relevo</p>
     </div>
     <div class="Principal2">
-      <p class="p3">O relevo é o conjunto de formas dispostas na superfície terrestre, logo, esse conceito reúne as
+      <p class="conteudo">O relevo é o conjunto de formas dispostas na superfície terrestre, logo, esse conceito reúne as
         feições geomorfológicas que ocorrem na litosfera do planeta. As quatro grandes formas de relevo são montanha,
         planalto, depressão e planície. O relevo é o conceito geográfico das diversas formas dispostas ao longo da
         superfície do planeta.(MUNDO EDUCAÇÃO, 2023).
       </p>
-      <p class="p3"> São formas de relevo:
+      <p class="conteudo"> São formas de relevo:
       </p>
       <ul class="list">
         <li>Montanhas</li>
@@ -63,17 +63,17 @@
         <p class="referenciaimg" id="refImage">Fonte: Baduka, 2023
         </p>
       </div>
-      <p class="p3">O relevo do Brasil foi categorizado por Aziz Ab’Sáber e Jurandyr Ross. De acordo com Ab’Sáber, o
+      <p class="conteudo">O relevo do Brasil foi categorizado por Aziz Ab’Sáber e Jurandyr Ross. De acordo com Ab’Sáber, o
         Brasil é formado por um conjunto de planaltos e planícies. Ross identificou um conjunto de 28 unidades de relevo
         no território brasileiro, que se dividem entre planaltos, planícies e depressões (BRASIL ESCOLA, 2023).
-      <p class="p2">Quais são os agentes do relevo?
+      <p class="tituloParagrafo">Quais são os agentes do relevo?
       </p>
       </p>
-      <p class="p3">Os agentes que formam o relevo são fatores que atuam diretamente na definição das formas que
+      <p class="conteudo">Os agentes que formam o relevo são fatores que atuam diretamente na definição das formas que
         observamos na superfície terrestre. Podem ser divididos em dois grupos (MUNDO EDUCAÇÃO, 2023)
       </p>
-      <p class="p3">Agentes endógenos ou internos</p>
-      <p class="p3">Dizem respeito à estrutura interna do planeta e às forças que trabalham no soerguimento ou
+      <p class="conteudo">Agentes endógenos ou internos</p>
+      <p class="conteudo">Dizem respeito à estrutura interna do planeta e às forças que trabalham no soerguimento ou
         rebaixamento de certas áreas. Trata-se:
       </p>
       <ul class="list">
@@ -81,8 +81,8 @@
         <li>das atividades vulcânicas; </li>
         <li>também das pressões feitas internamente pelo magma.</li>
       </ul>
-      <p class="p3"> Agentes exógenos ou externos</p>
-      <p class="p3">Os fatores externos são aqueles que promovem o intemperismo tanto físico quanto químico-biológico
+      <p class="conteudo"> Agentes exógenos ou externos</p>
+      <p class="conteudo">Os fatores externos são aqueles que promovem o intemperismo tanto físico quanto químico-biológico
         das rochas, os quais, por sua vez, podem originar os processos que caracterizam a erosão. São agentes exógenos:
       </p>
       <ul class="list">
@@ -90,7 +90,7 @@
           variações de temperatura e a gravidade.
         </li>
       </ul>
-      <p class="p3">É importante notar que a ação antrópica acelera os processos de intemperismo e erosão,
+      <p class="conteudo">É importante notar que a ação antrópica acelera os processos de intemperismo e erosão,
         transformando, assim, a paisagem e as formas de relevo.
       </p>
       <p class="bibliografia1">REFERÊNCIA BIBLIOGRÁFICA:</p>
