--- a/pagina3,5.html
+++ b/pagina3,5.html
@@ -31,13 +31,13 @@
   </nav>
   <main class="conteiner">
     <div class="Principal1">
-      <p class="p2">
+      <p class="tituloParagrafo">
         Geografia econômica
       </p>
     </div>
     </div>
     <div class="Principal2">
-      <p class="p3"> A Geografia Econômica é o ramo do conhecimento responsável por compreender a lógica da produção e distribuição das atividades econômicas. Além disso, ela visa entender a influência dessas manifestações produtivas sobre o espaço geográfico e as interferências que o meio realiza sobre elas.(PENA, 2023)
+      <p class="conteudo"> A Geografia Econômica é o ramo do conhecimento responsável por compreender a lógica da produção e distribuição das atividades econômicas. Além disso, ela visa entender a influência dessas manifestações produtivas sobre o espaço geográfico e as interferências que o meio realiza sobre elas.(PENA, 2023)
       </p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 1 - Representação da economia
@@ -46,16 +46,16 @@
         <p class="referenciaimg" id="refImage">Fonte: MUNDOEDUCACAO, 2023
         </p>
       </div>
-      <p class="p3">Podemos considerar que o espaço geográfico, tanto no meio urbano quanto no meio rural é essencialmente produzido, ou seja, é construído pelas práticas humanas. O estabelecimento dessas práticas está, quase sempre, relacionado à manifestação de condutas no meio financeiro e tecnológico que irão sustentar ações de impacto. (PENA, 2023)</p>
-      <p class="p3"> Outro ponto importante é a análise crítica dos motivos pelos quais determinada atividade econômica é realizada em um local, considerando os elementos da região como o clima, relevo, disponibilidade de recursos naturais, etc.(CERQUEIRA, 2023)
+      <p class="conteudo">Podemos considerar que o espaço geográfico, tanto no meio urbano quanto no meio rural é essencialmente produzido, ou seja, é construído pelas práticas humanas. O estabelecimento dessas práticas está, quase sempre, relacionado à manifestação de condutas no meio financeiro e tecnológico que irão sustentar ações de impacto. (PENA, 2023)</p>
+      <p class="conteudo"> Outro ponto importante é a análise crítica dos motivos pelos quais determinada atividade econômica é realizada em um local, considerando os elementos da região como o clima, relevo, disponibilidade de recursos naturais, etc.(CERQUEIRA, 2023)
       </p>
     
-      <p class="p3"> Essa subseção de Geografia Econômica é composta por artigos que abordam a localização industrial, sistemas econômicos, revoluções industriais, agropecuária, globalização, desigualdades socioeconômicas, fluxos de capitais, blocos econômicos, divisão do trabalho, entre tantos outros. (CERQUEIRA, 2023)
+      <p class="conteudo"> Essa subseção de Geografia Econômica é composta por artigos que abordam a localização industrial, sistemas econômicos, revoluções industriais, agropecuária, globalização, desigualdades socioeconômicas, fluxos de capitais, blocos econômicos, divisão do trabalho, entre tantos outros. (CERQUEIRA, 2023)
       </p>
 
-      <p class="p3">Alguns conceitos precisam ser conhecidos para o entendimento da Geografia Econômica e suas áreas de estudo. O primeiro deles é o conceito de economia, que pode ser definida como uma forma de organização social para garantir a produção de bens e serviços. Isso é possível por meio dos cuidados com produção, que envolvem recursos naturais, trabalho (mão de obra) e capital (máquinas e infraestrutura) por conta da ameaça de escassez. (LOPES, 2018)      </p>
+      <p class="conteudo">Alguns conceitos precisam ser conhecidos para o entendimento da Geografia Econômica e suas áreas de estudo. O primeiro deles é o conceito de economia, que pode ser definida como uma forma de organização social para garantir a produção de bens e serviços. Isso é possível por meio dos cuidados com produção, que envolvem recursos naturais, trabalho (mão de obra) e capital (máquinas e infraestrutura) por conta da ameaça de escassez. (LOPES, 2018)      </p>
       
-      <p class="p3"> Meio ou espaço geográfico é outra definição que deve ser entendida corretamente como um produto e condição da ação humana. É composto por um conjunto de sistemas de ações (tudo que é praticado) e sistema de objetos (tudo que é usado para fazer), ambos interdependentes. (LOPES, 2018)</p>
+      <p class="conteudo"> Meio ou espaço geográfico é outra definição que deve ser entendida corretamente como um produto e condição da ação humana. É composto por um conjunto de sistemas de ações (tudo que é praticado) e sistema de objetos (tudo que é usado para fazer), ambos interdependentes. (LOPES, 2018)</p>
       <p class="bibliografia1">REFERÊNCIA BIBLIOGRÁFICA:</p>
 
       <p class="bibliografia">MUNDO ESCOLA."Dicas de Geografia Econômica para o Enem”;Mundo escola Vestibular. Disponível em:https://vestibular.mundoeducacao.uol.com.br/enem/dicas-geografia-economica-para-enem.htm. Acesso em 25 de abril de 2023
