--- a/pagina3,2.html
+++ b/pagina3,2.html
@@ -33,13 +33,13 @@
   </nav>
   <main class="conteiner">
     <div class="Principal1">
-      <p class="p2">
+      <p class="tituloParagrafo">
         Climas
       </p>
     </div>
     <div class="Principal2">
 
-      <p class="p3">Clima é o conjunto de características e dinâmicas da atmosfera de uma certa região, analisadas ao
+      <p class="conteudo">Clima é o conjunto de características e dinâmicas da atmosfera de uma certa região, analisadas ao
         longo de um extenso período de tempo. Cada clima presente no nosso planeta é caracterizado por elementos como
         temperatura, umidade do ar, radiação solar, precipitação e ventos.(BRASIL ESCOLA,2023):
       </p>
@@ -50,26 +50,26 @@
         <p class="referenciaimg" id="refImage">Fonte: GUITARRA, 2023
         </p>
       </div>
-      <p class="p3">Clima é o conceito que se remete à sucessão dos tipos de tempo observados em uma região ao longo dos
+      <p class="conteudo">Clima é o conceito que se remete à sucessão dos tipos de tempo observados em uma região ao longo dos
         anos. Seus principais tipos são: equatorial, tropical, temperado, frio, polar, mediterrâneo e desértico. No
         Brasil, predominam as variações do tropical — como tropical de altitude, semiárido e subtropical —, além do
         equatorial (MUNDO EDUCAÇÃO, 2023).
       </p>
-      <p class="p3">Os quatro elementos que interferem nas condições climáticas são: temperatura, umidade, radiação e
+      <p class="conteudo">Os quatro elementos que interferem nas condições climáticas são: temperatura, umidade, radiação e
         pressão atmosférica. Os principais fatores climáticos são: latitude, altitude, massas de ar, correntes
         marítimas, continentalidade e maritimidade (MUNDO EDUCAÇÃO, 2023).
 
       </p>
-      <p class="p3">Diferentemente do clima, o tempo remete ao estado momentâneo da atmosfera, ou seja, corresponde às
+      <p class="conteudo">Diferentemente do clima, o tempo remete ao estado momentâneo da atmosfera, ou seja, corresponde às
         condições climáticas em um curto período. São exemplos de fenômenos atmosféricos os ciclones e os tornados, além
         dos processos naturais de inversão térmica e efeito estufa (MUNDO EDUCAÇÃO, 2023).
 
       </p>
-      <p class="p2">
+      <p class="tituloParagrafo">
         Qual a diferença entre clima e tempo:
 
       </p>
-      <p class="p3">A “Clima”, como explicado antes, lida com períodos longos e reúne as características de uma região.Para definir o clima, precisamos dos dados históricos da área estudada.Já o tempo se refere às condições meteorológicas no momento em que a observação é realizada (MUNDO EDUCAÇÃO, 2023).
+      <p class="conteudo">A “Clima”, como explicado antes, lida com períodos longos e reúne as características de uma região.Para definir o clima, precisamos dos dados históricos da área estudada.Já o tempo se refere às condições meteorológicas no momento em que a observação é realizada (MUNDO EDUCAÇÃO, 2023).
       </p>
       <p class="bibliografia1">REFERÊNCIA BIBLIOGRÁFICA:</p>
 
