--- a/pagina3,6.html
+++ b/pagina3,6.html
@@ -33,50 +33,50 @@
   </nav>
   <main class="conteiner">
     <div class="Principal1">
-      <p class="p2">
+      <p class="tituloParagrafo">
         Sambaqui
       </p>
     </div>
     <div class="Principal2">
-      <p class="p2">O que são Sambaquis?</p>
-      <p class="p3">
+      <p class="tituloParagrafo">O que são Sambaquis?</p>
+      <p class="conteudo">
         Os sambaquis são formações que são feitas, principalmente, de conchas de moluscos, formadas ao longo de milhares de anos pelas populações que habitavam regiões litorâneas. Essas conchas eram descartadas após o consumo dos moluscos, formando imensas montanhas (PINTO, 2023).
       </p>
-      <p class="p3">
+      <p class="conteudo">
         Apesar de conhecermos os casos do litoral brasileiro, como em Santa Catarina, onde se encontram os maiores do mundo, há indícios de sambaquis na Europa, na América e na África. No Brasil os sambaquis podem chegar a entre 2 e 20 metros de altura, podendo chegar a 100 metros de diâmetro. Alguns possuem mais de 5000 anos (PINTO, 2023).
       </p>
-      <p class="p2">Localização dos Sambaquis na nossa região.</p>
+      <p class="tituloParagrafo">Localização dos Sambaquis na nossa região.</p>
       <div class="hisimg">
         <p class="referenciaimg">Figura 17 - Localização dos sambaquis
         </p>
         <img class="imghis" src="sambaquiImg/localSambaqui.jpeg" alt="">
         <p class="referenciaimg" id="refImage">Fonte: DE SÁ <em>et al.</em>, 2021.</p>
       </div>
-      <p class="p2">Eram de que espécie?</p>
-      <p class="p3">Quem eram essas pessoas que hoje chamamos de Sambaquis?Primeiro devemos levar sempre em conta: eles eram Homo sapiens sapiens (KLUEGER,2004).
+      <p class="tituloParagrafo">Eram de que espécie?</p>
+      <p class="conteudo">Quem eram essas pessoas que hoje chamamos de Sambaquis?Primeiro devemos levar sempre em conta: eles eram Homo sapiens sapiens (KLUEGER,2004).
       </p>
-      <p class="p3">Segundo observações nas falas do professor Ivan em aula, a  espécie dos Sambaquis eram Homo sapiens, tendo em vista que não se teve outra espécie existente na localidade da América do Sul, além de terem a estrutura óssea similar.</p>
-      <p class="p2">Como eles chegaram na América,onde habitaram na região da Baía de Babitonga.</p>
-      <p class="p3">
+      <p class="conteudo">Segundo observações nas falas do professor Ivan em aula, a  espécie dos Sambaquis eram Homo sapiens, tendo em vista que não se teve outra espécie existente na localidade da América do Sul, além de terem a estrutura óssea similar.</p>
+      <p class="tituloParagrafo">Como eles chegaram na América,onde habitaram na região da Baía de Babitonga.</p>
+      <p class="conteudo">
         Pelo que foi ouvido em sala de aula, já que os sambaquis evoluíram dos Homo Sapiens, eles já estavam aqui quando sua espécie existiu, mas uma das hipóteses de como a espécie Homo chegou à América é que fizeram uma migração pelo Estreito de Bering.
       </p>
-      <p class="p3">
+      <p class="conteudo">
         Os sambaquis habitaram na Baía da Babilônia a beira do mar, em suas costas, as regiões em que foram encontradas são no litoral de Santa Catarina, nas cidades de São Francisco, Balneário Barra do Sul (ESPAÇOARQUEOLOGIA, 2023).
       </p>
-      <p class="p2">Qual era a principal alimentação dos Sambaquis ?
+      <p class="tituloParagrafo">Qual era a principal alimentação dos Sambaquis ?
       </p>
-      <p class="p3">
+      <p class="conteudo">
         Segundo informações vistas na visita ao museu do sambaqui, além dos alimentos encontrados nos Sambaquis, ostras, berbigões, mexilhões e peixes. Graças a estudos de esqueletos em Sítios Arqueológicos, também foi identificado a ingestão de grande quantidade de carboidratos de origem vegetal, podendo identificar o cará, pinhão, frutos de palmeira como o jerivá, butiá, tucum, entre outros e, possivelmente, batata-doce e alguma gramínea tipo milho (MUSEU DO SAMBAQUI, 2023).
       </p>
-      <p class="p2">O que é um zoólito ?</p>
-      <p class="p3">
+      <p class="tituloParagrafo">O que é um zoólito ?</p>
+      <p class="conteudo">
         Foi no sambaqui do Perrixil, localizado nas proximidades da atual cidade de Laguna, que essa bela peça foi encontrada. Esculpidas em rocha há milhares de anos, esculturas em forma de animal como essa são denominadas de zoólitos (zoo= animal e lito= pedra). Acertou quem pensou que ela retrata um peixe! (UFSC, 2023).
       </p>
-      <p class="p3">
+      <p class="conteudo">
         Os zoólitos são encontrados numa região que se estende do sul de São Paulo até o Uruguai.  Na sua grande maioria representam peixes e aves marinhas, por vezes com preciosos detalhes anatômicos. Essas esculturas denotam um profundo conhecimento por parte de seus produtores em relação ao ambiente e aos animais que dele fazem parte, indicando uma estreita relação com o mundo costeiro (UFSC, 2023)
       </p>
-      <p class="p2">Todo sambaqui contém sepultamento ?</p>
-      <p class="p3">Não. Porque Cada comunidade construía os seus sambaquis para atender finalidades específicas, como demarcação de território, mirante, cemitério, entre outros (DOMINGUES, 2023).</p>
+      <p class="tituloParagrafo">Todo sambaqui contém sepultamento ?</p>
+      <p class="conteudo">Não. Porque Cada comunidade construía os seus sambaquis para atender finalidades específicas, como demarcação de território, mirante, cemitério, entre outros (DOMINGUES, 2023).</p>
     </div>
   </main>
   <footer>
